--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 # 12S2203 Object-Oriented Programming
 This repository is dedicated to store 12S2203 Object-Oriented Programming course artifacts.
+/work/assignments/02/student_database/nbproject/private/
+/work/assignments/02/student_database/build/
